[package]
name = "dumbnet"
version = "0.1.0"
authors = ["djugei <ddjugei@gmail.com>"]
edition = "2018"

[dependencies]
generic-array = { version = "*", features = ["serde"] }
rand = { version = "*", default-features = false, features = ["getrandom"] }
getrandom = { version = "*", default-features = false, features = ["dummy"] }
itertools = { version = "*", default-features = false }
serde = { version = "*", default-features = false }
serde_derive = "*"
numeric-array = "*"

[dev-dependencies]
gnuplot = "*"
indicatif = "*"
bincode = "*"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
