[package]
name = "dumbnet"
version = "0.1.0"
authors = ["djugei <ddjugei@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/djugei/dumbnet"
description = "a [no_std] neural network library"

[dependencies]
generic-array = { version = "0.13", features = ["serde"] }
rand = { version = "0.7", default-features = false, features = ["getrandom"] }
getrandom = { version = "0.1", default-features = false, features = ["dummy"] }
itertools = { version = "0.8", default-features = false }
serde = { version = "1.0", default-features = false }
serde_derive = "1.0"
numeric-array = "0.4"

[dev-dependencies]
gnuplot = "*"
indicatif = "*"
bincode = "*"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
